# OTUS_CPP

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md  bintray-descriptor.json
.github/workflows/: cmake.yml
cmake/: Conan.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  README.md
src/helloworld_cli/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
src/ip_filter/: CMakeLists.txt  ip_filter.cpp  ipv4.cpp  ipv4.h  parse_ipv4_test.cpp
test/: CMakeLists.txt
